# open-course-api

./: .env.demo  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: paginator.py  urls.py
category/: admin.py  models.py  serializers.py  views.py
category/migrations/: 0001_initial.py  0002_categorymodel_created_on.py
contact_us/: admin.py  models.py  serializers.py  views.py
contact_us/migrations/: 0001_initial.py  0002_contactusmodel_created_on.py  0003_alter_contactusmodel_message.py
course/: admin.py  course_enrollment_views.py  course_review_views.py  models.py  serializers.py  views.py
course/migrations/: 0001_initial.py  0002_coursemodel_category_coursemodel_teacher.py  0003_coursemodel_total_duration_coursemodel_total_videos.py  0004_alter_coursemodel_course_status.py  0005_alter_coursemodel_course_status.py  0006_courseenrollmentmodel.py  0007_coursereviewmodel.py  0008_courseenrollmentmodel_created_on_and_more.py  0009_alter_courseenrollmentmodel_meta_and_more.py  (+16 more)
course_review/: admin.py  apps.py  models.py  serializers.py  views.py
course_section/: admin.py  apps.py  models.py  serializers.py  views.py
course_video/: admin.py  models.py  serializers.py  views.py
image_upload/: serializers.py  views.py
logs/: README.md
opencourseapi/: asgi.py  settings.py  urls.py  wsgi.py
student_progress/: admin.py  models.py  serializers.py  views.py
user/: admin.py  managers.py  models.py  permissions.py  serializers.py  validators.py  views.py
video_upload/: response_serializers.py  serializers.py  views.py
(+31 files in other folders)
