[tool.poetry]
name = "open-course-api"
version = "0.1.0"
description = ""
authors = ["preitychib <preeti.chib2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
environs = {extras = ["django"], version = "^9.5.0"}
yapf = "^0.32.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-jazzmin = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
