[tool.poetry]
name = "open-course-api"
version = "0.1.0"
description = ""
authors = ["preitychib <preeti.chib2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
environs = {extras = ["django"], version = "^9.5.0"}
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-jazzmin = "^2.5.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.0"
drf-spectacular = "^0.22.1"
drf-spectacular-sidecar = "^2022.6.1"
argon2-cffi = "^21.3.0"
cloudinary = "^1.29.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
